feat(docker): adding api in docker compose and refactor approve
